Improve logic to avoid type promotion in float normalization

--- a/xla/service/BUILD
+++ b/xla/service/BUILD
@@ -298,6 +298,7 @@ cc_library(
     srcs = ["float_normalization.cc"],
     hdrs = ["float_normalization.h"],
     deps = [
+        ":collective_ops_utils",
         ":float_support",
         ":hlo_dce",
         ":hlo_pass",
